--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,12 +42,12 @@ services:
     ports: ["6379:6379"]
     restart: always
 
-  # redis-commander:
-  #   image: rediscommander/redis-commander
-  #   ports: ["8081:8081"]
-  #   environment:
-  #     REDIS_HOSTS: local:redis:6379
-  #   restart: always
+  redis-commander:
+    image: rediscommander/redis-commander
+    ports: ["8081:8081"]
+    environment:
+      REDIS_HOSTS: local:redis:6379
+    restart: always
 
   demo-raw-data-kafka-producer:
     build:
