--- a/demo/attempt-4-kafka-streams-using-ksqldb/docker-compose.yml
+++ b/demo/attempt-4-kafka-streams-using-ksqldb/docker-compose.yml
@@ -86,4 +86,6 @@ services:
     restart: always
 
   # Connect using ksqldb-cli. 
-  # e.g. docker run --rm --interactive --tty confluentinc/ksqldb-cli:latest ksql http://10.100.102.26:8088
+  # e.g. docker run --rm --network host --interactive --tty confluentinc/ksqldb-cli:latest ksql http://localhost:8088
+
+  
